[metadata]
name = zxlive
version = 0.1
description = An interactive tool for the ZX calculus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantomatic/zxlive
author = Aleks Kissinger
author_email = aleks0@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker=https://github.com/Quantomatic/zxlive/issues

[options]
packages = find:
install_requires =
    PySide6
    pyzx>=0.7.3
    qt-material
python_requires = >=3.7

[options.packages.find]
exclude = *tests*

[options.entry_points]
console_scripts =
    zxlive=zxlive.app:main

[options.package_data]
* =
    *.svg
